2005-11-02  Vlad Seryakov  <seryakov@users.sf.net>

	* tests/ns_info.test: added 1 second delay to make ns_info 
	uptime report uptime > 0 successfuly

	* configure.in:
	* m4/cmmsg.m4:
	* include/ns.h:
	* nsd/binder.c:
	* nsd/nsmain.c: Added support of binder as a separate process
	forked before switching off root priviliges and provided
	new API function Ns_SockListenBinder for creating
	sockets. In this mode, no need to specify all ports in the command line
	parameter -b. For now all modules have to call new API function in order
	to create sockets if they are not specified using -b command line 
	paramater.

2005-10-28  Bernd Eidenschink  <eide@users.sourceforge.net>

	* tcl/compat.tcl: ns_rename now does not delete a file
	if "from" and "to" match.

2005-10-27  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* include/ns.h:
	* nsd/log.c: added Ns_VALog with varargs interface

2005-10-24  Bernd Eidenschink  <eide@users.sf.net>

	* tests/ns_set.test: added basic tests for ns_set command.

2005-10-22  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclcmds.c:
	* nsd/tclenv.c:
	* tests/ns_env.test: Untabify and reformat code, convert to Tcl
	objects.  Fix bugs with -nocomplain switch and unset
	command. (Bug# 1333280)

2005-10-22  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/nsmain.c (Ns_Main): initialize Tcl library in the
	server process only. Fix the broken SIGINT hadling which
	allowed us to CTRL-C the booting process at any time.
	Watchdog wakes up every 10 minutes on all platforms.

	* nsd/modload.c (Ns_ModuleLoad): make the passed file
	path absolute before attempting to load the module.

	* nsd/tclmisc.c: removed plaform testing and added
	platform-neutral testing for some data types.

	* configure.in: added platform neutral testing for 
	u_int32_t and u_int8_t types.

2005-10-21  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/tclcmds.c
	* nsd/tclfile.c: re-born ns_normalizepath as C command